--- a/src/main/resources/static/WorkList.html
+++ b/src/main/resources/static/WorkList.html
@@ -39,7 +39,7 @@
             <a class="nav-link" href="Article.html">发布中心</a>
         </li>
         <li class="nav-item active">
-            <a class="nav-link" href="Pot.html">发现</a>
+            <a class="nav-link" href="forum.html">发现</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="LoginRegister.html">登录/注册</a>
@@ -87,7 +87,7 @@
                         <td>作者1</td>
                         <td>作品1</td>
                         <td>2022-01-01</td>
-                        <td><a href="detail.html" class="btn btn-primary">查看详情</a></td>
+                        <td><a href="details.html" class="btn btn-primary">查看详情</a></td>
                         <td><a href="edit.html" class="btn btn-primary">编辑</a> <a href="delete.html" class="btn btn-danger">删除</a></td>
                     </tr>
                     <tr>
@@ -95,7 +95,7 @@
                         <td>作品2</td>
                         <td>作品2</td>
                         <td>2022-02-15</td>
-                        <td><a href="detail.html" class="btn btn-primary">查看详情</a></td>
+                        <td><a href="details.html" class="btn btn-primary">查看详情</a></td>
                         <td><a href="edit.html" class="btn btn-primary">编辑</a> <a href="delete.html" class="btn btn-danger">删除</a></td>
                     </tr>
                     <tr>
@@ -103,7 +103,7 @@
                         <td>作品3</td>
                         <td>作品3</td>
                         <td>2022-03-20</td>
-                        <td><a href="detail.html" class="btn btn-primary">查看详情</a></td>
+                        <td><a href="details.html" class="btn btn-primary">查看详情</a></td>
                         <td><a href="edit.html" class="btn btn-primary">编辑</a> <a href="delete.html" class="btn btn-danger">删除</a></td>
                     </tr>
                     </tbody>
