--- a/src/main/resources/static/ChangePassword.html
+++ b/src/main/resources/static/ChangePassword.html
@@ -50,7 +50,7 @@
             <a class="nav-link" href="Article.html">发布中心</a>
         </li>
         <li class="nav-item active">
-            <a class="nav-link" href="Pot.html">发现</a>
+            <a class="nav-link" href="forum.html">发现</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="LoginRegister.html">登录/注册</a>
