--- a/src/main/resources/static/PersonInfo.html
+++ b/src/main/resources/static/PersonInfo.html
@@ -53,7 +53,7 @@
             <a class="nav-link" href="index.html">主页</a>
         </li>
         <li class="nav-item active">
-            <a class="nav-link" href="Pot.html">发现</a>
+            <a class="nav-link" href="forum.html">发现</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="Article.html">发布中心</a>
