--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -27,7 +27,7 @@
             <a class="nav-link" href="index.html">主页</a>
         </li>
         <li class="nav-item active">
-            <a class="nav-link" href="Pot.html">发现</a>
+            <a class="nav-link" href="forum.html">发现</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="Article.html">发布中心</a>
@@ -88,16 +88,16 @@
         </div>
     </div>
     <div class="card">
-        <img src="img/d2.jpg"class="card-img-top" alt="...">
+        <img src="img/d2.jpg" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">
-                <a href="link_2.html" style="color: rgba(23,54,112,0.97);">——✿ 发现</a>
+                <a href="forum.html" style="color: rgba(23,54,112,0.97);">——✿ 发现</a>
             </h5>
             <p class="card-text">看你想看的，了解更多中国传统服饰。</p>
         </div>
     </div>
     <div class="card">
-        <img src="img/d1.jpg" class="card-img-top" alt="...">
+        <img src="img/d1.jpg" class="card-img-top" alt="..."> 吗
         <div class="card-body">
             <h5 class="card-title">
                 <a href="PersonInfo.html" style="color: rgba(23,54,112,0.97);">——✿ 个人中心</a>
