--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -97,7 +97,7 @@
         </div>
     </div>
     <div class="card">
-        <img src="img/d1.jpg" class="card-img-top" alt="..."> 吗
+        <img src="img/d1.jpg" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">
                 <a href="PersonInfo.html" style="color: rgba(23,54,112,0.97);">——✿ 个人中心</a>
